# CLionGL

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Bullet.h  GLBuffer.h  GLShaderProgram.h  GLTexture.h  GLVertexArray.h  Player.h  Transform2D.h
resources/shaders/: 2dcircle.frag  2dcircle.vert  solidcolor.frag  uniformcolor.frag
src/: Bullet.cpp  GLBuffer.cpp  GLShaderProgram.cpp  GLTexture.cpp  GLVertexArray.cpp  Player.cpp  Transform2D.cpp
